--- a/projectnode/package.json
+++ b/projectnode/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "projectnode",
+  "name": "project",
   "version": "1.0.0",
   "main": "app.js",
- "scripts": {
+"scripts": {
     "development": "npx nodemon app.js",
     "production": "npx forever start app.js",
     "stop_production": "npx forever stop app.js"
@@ -12,7 +12,7 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
-    "express-handlebars": "^8.0.1",
+    "express-handlebars": "^8.0.3",
     "forever": "^4.0.3",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10"
