--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+*.sql linguist-language=SQL
+*.ejs linguist-language=HTML
+*.css linguist-language=CSS
